# eng_to_ru

./: README.md  pyproject.toml
src/eng_to_ru/: __init__.py  eng_to_ru.py
tests/: test_eng_to_ru.py
