[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "eng_to_ru"
version = "0.1.1"
authors = [
    { name = "rrfedorovich", email = "rrfedorovich@gmail.com" },
]
description = "Библиотека для перевода текста с английского на русский с использованием Google Translate API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "deep-translator>=1.11.4",
]

[project.urls]
Homepage = "https://github.com/rrfedorovich/eng_to_ru"